c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/sizeof_void_array.c
int main(void) {
    // the element type in an array declarator must be complete
    return sizeof(void[3]);
}